Add header section & remove node modules

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Webpack config</h1>
+        <header>
+            <a>Logo</a>
+            <nav>
+                <ul>
+                 <li>Spaceships(6)</li>
+                 <li>Planets</li>
+                 <li>Races</li>
+                </ul>
+            </nav>
+        </header>
     </div>
     
 </body>
