Add fake comment button

--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,7 @@
             </nav>
         </header>
     </div> 
+    <button id="comment-pop">comments</button>
     <div id="main-container">
     </div> 
     <div id="comment-section">
