implementation of homepage

--- a/src/template.html
+++ b/src/template.html
@@ -10,11 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato:wght@300&family=Open+Sans:wght@300&family=Roboto:wght@100;500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/d614fc8c85.js" crossorigin="anonymous"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div class="container">
-      <h1>Webpack config</h1>
+      <div class="cards-container">
+      </div>
     </div>
   </body>
 </html>
