Add a comment popup

--- a/src/template.html
+++ b/src/template.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <header>
-            <a>Logo</a>
+            <a href="#">Logo</a>
             <nav>
                 <ul>
-                 <li>Spaceships(6)</li>
-                 <li>Planets</li>
-                 <li>Races</li>
+                 <li>Movies(6)</li>
+                 <li>Episodes</li>
+                 <li>Series</li>
                 </ul>
             </nav>
         </header>
