Display number of like for each card on the homepage, Get Json Data from API

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Javascript Group Capstone Project By David Yannick and Saningo  </title>
-<script defer src="main.js"></script></head>
+</head>
 <body>
   <header>
     <div class="navbar">
