implement home page

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,41 @@
       </header>
       <button id="comment-pop">comments</button>
       <div id="comment-section"></div>
-      <div id="reserve-container"></div>
+      <div id="reserve-container">
+        <div class="image-reservation">
+          <div class="cross-container">
+            <button type="button">&times;</button>
+          </div>
+          <div class="img-container">
+            <img src="../assets/film-icon.jpeg" class="space-img" alt="spaceship">
+          </div>
+        </div>
+        <div class="section-one">
+          <h2>Space 3</h2>
+          <ul class="my-list">
+            <li>Fuel spaceship</li>
+            <li>Fuel spaceship</li>
+            <li>Fuel spaceship</li>
+            <li>Fuel spaceship</li>
+          </ul>
+        </div>
+        <div class="section-two">
+          <h2>Reservation 2</h2>
+          <ul class="dates-list">
+            <li>03/05/2022</li>
+            <li>03/05/2022</li>
+          </ul>
+        </div>
+        <div class="section-three">
+          <h1>Add reservation</h1>
+          <form id="my-form">
+            <input type="text" placeholder="Your name" id="name-input">
+            <input type="date" placeholder="Start date" id="start-input">
+            <input type="date" placeholder="End date" id="end-input">
+            <input type="button" value="Submit Reservation">
+          </form>
+        </div>
+      </div>
       <div class="cards-container"></div>
     </div>
   </body>
