updated nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="navbar">
-        <a class="link-logo" href="./index.html">Logo</a>
+        <a class="link-logo" href="./index.html">LFilms </a>
         <nav class="links">
           <ul class="link-lists">
             <li class="link-list"><a href="#">About</a></li>
