--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <div class="grid-cards-container"></div>
     </main>
     <aside class="movie-popup"></aside>
-    <div class="footer">Javascript Group Capstone By David Yannick and Saningo</div>
+    <div class="footer">&#169; LFilm <em>enjoy</em></div>
     <footer></footer>
   </body>
 </html>
